--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,32 @@ umongo==3.0.1
 requests
 bs4
 git+https://github.com/Joelkb/cinemagoer
-shortzy
+Heroku3
+search_engine_parser
+wget
+aiofiles
+ffmpeg-python
+ffmpeg
+youtube_search
+youtube_search_python
+youtube-search-python==1.4.6
+yt-dlp
+youtube-dl
+youtube_search
+requests
+aiohttp==3.7.4
+gTTS
+googletrans==3.1.0a0
+telegraph
+PyPDF2
+ujson
+pyshorteners
+countryinfo
 datetime
 pytz
-Flask==2.2.2
-gunicorn==20.1.0
-aiohttp==3.8.1
+dnspython==2.3.0
+aiohttp<=3.11.2
+python-math
+Pillow
+speedtest-cli
+
