--- a/app.json
+++ b/app.json
@@ -85,7 +85,7 @@
     "formation": {
         "worker": {
             "quantity": 1,
-            "size": "basic"
+            "size": "eco"
         }
     }
 }
