--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,21 @@ pytz
 Flask==2.2.2
 gunicorn==20.1.0
 aiohttp==3.8.1
+
+
+pyrogram
+pyrofork
+tgcrypto
+pymongo[srv]
+motor
+marshmallow
+umongo
+requests
+bs4
+git+https://github.com/Joelkb/cinemagoer
+shortzy
+datetime
+pytz
+Flask
+gunicorn
+aiohttp
