--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-pyrogram>=2.0.30
+pyrogram
 tgcrypto
-pymongo[srv]==3.12.3
-motor==2.5.1
-marshmallow==3.14.1
-umongo==3.0.1
+pymongo[srv]
+motor
+marshmallow
+umongo
 requests
 bs4
 git+https://github.com/Joelkb/cinemagoer
 shortzy
 datetime
 pytz
-Flask==2.2.2
-gunicorn==20.1.0
-aiohttp==3.8.1
+Flask
+gunicorn
+aiohttp
 
 
 pyrogram
